@@ -31,6 +31,10 @@ public class EncodedDoubleValue extends EncodedValue {
 
     public EncodedDoubleValue(String name, int shift, int bits, double factor, long defaultValue, int maxValue, boolean allowZero) {
         super(name, shift, bits, factor, defaultValue, maxValue, allowZero);
+        double factorDivision = maxValue / factor;
+        if (factorDivision != (int) factorDivision) {
+            throw new IllegalStateException("MaxValue needs to be divisible by factor without remainder");
+        }
     }
 
     @Override
@@ -54,7 +58,7 @@ public class EncodedDoubleValue extends EncodedValue {
 
         // scale value
         long tmpValue = Math.round(value / factor);
-        checkValue(Math.round(tmpValue * factor));
+        checkValue((long) (tmpValue * factor));
         tmpValue <<= shift;
 
         // clear value bits
